fix: removed extra padding when opening the dropdown

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,9 +1,9 @@
 html,
 body {
-    max-width: 100vw;
     overflow-x: hidden;
     margin: 0;
     padding: 0;
+    padding-right: 0 !important;
 }
 
 body {
